--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-<h1>hello</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <script src="jsfiles/firstsubmit.js"></script>
+    <link rel="stylesheet" type="text/css" href="cssfiles/first.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <title>Just Type Your Question</title>
+</head>
+<body id='body'><nav style="background:black; left:20%;">
+  <a>.</a>
+  </nav>
+    <div id="leftcircle" class="w3-container">
+    
+    <button class='PAQ' id="paqq" style="color:rgb(247, 185, 185)"; onclick="paqbtn()" target="_self"><b>Previously <br>Asked<br> Questions</b></button>
+    <a href="addasadmin.html"><button class='aa' style="color:whitesmoke";  ><b>Want to give answers</b></button>
+   </a>
+    </div>
+    <center>
+      <div class="w3-container">
+    <textarea  type="text" id="addquestions" rows=10 cols=25 style="font-family:monospace; border: blanchedalmond; background:#122; font-size: 200%; color: rgb(250,250,250);"placeholder="Type Your Question..."></textarea>
+  <hr width="50%" color="black">
+        <div style="position: relative; top:20px;">
+        <button value="submit" id='sb' onclick="submitfunction()">submit</button>
+</div>
+</div>
+    </center>
+ 
+        <div id="questions"></div> 
+  
+
+  
+<footer id="footer">
+    <p>made by-Amit Kumar<br>
+    <a href="mailto:amitku9995@gmail.com" ><b>amitku9995@gmail.com</b></a></p>
+
+</footer>
+</body>
+</html>
