--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <script src="jsfiles/firstsubmit.js"></script>
-    <link rel="stylesheet" type="text/css" href="cssfiles/first.css">
+    <link rel="stylesheet" type="text/css" href="first.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
