--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <script src="jsfiles/firstsubmit.js"></script>
+    <script src="firstsubmit.js"></script>
     <link rel="stylesheet" type="text/css" href="first.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
