--- a/index.html
+++ b/index.html
@@ -9,32 +9,47 @@
     
     <title>Just Type Your Question</title>
 </head>
-<body id='body'><nav style="background:black; left:20%;">
-  <a>.</a>
+
+<body id='body'>
+
+ 
+  
+  <div class="belowheader">
+    <center>
+      <h1 id="status" style="color:white;"></h1>
+      </center> 
+  </div>
   </nav>
-    <div id="leftcircle" class="w3-container">
+
+  <div class="left">
+    <div id="leftcircle">
     
     <button class='PAQ' id="paqq" style="color:rgb(247, 185, 185)"; onclick="paqbtn()" target="_self"><b>Previously <br>Asked<br> Questions</b></button>
+  
+  </div>
+  </div>
+  <div class="right">
     <a href="addasadmin.html"><button class='aa' style="color:whitesmoke";  ><b>Want to give answers</b></button>
    </a>
     </div>
+
     <center>
-      <div class="w3-container">
+      <div class="center">
     <textarea  type="text" id="addquestions" rows=10 cols=25 style="font-family:monospace; border: blanchedalmond; background:#122; font-size: 200%; color: rgb(250,250,250);"placeholder="Type Your Question..."></textarea>
   <hr width="50%" color="black">
         <div style="position: relative; top:20px;">
         <button value="submit" id='sb' onclick="submitfunction()">submit</button>
 </div>
-</div>
+
     </center>
  
         <div id="questions"></div> 
   
-
+  </div>
   
 <footer id="footer">
     <p>made by-Amit Kumar<br>
-    <a href="mailto:amitku9995@gmail.com" ><b>amitku9995@gmail.com</b></a></p>
+    <a href="mailto:amitku9995@gmail.com" style="color:white" ><b>amitku9995@gmail.com</b></a></p>
 
 </footer>
 </body>
